csharp/codegen/src/ma_wrap_ffi.rs

/* automatically generated by rust-bindgen 0.71.1 */

pub type ma_engine_handle = *mut ::std::os::raw::c_void;
pub type ma_sound_handle = *mut ::std::os::raw::c_void;
unsafe extern "C" {
    pub fn ma_wrap_version_string() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn ma_wrap_engine_init() -> ma_engine_handle;
}
unsafe extern "C" {
    pub fn ma_wrap_engine_uninit(engine: ma_engine_handle);
}
unsafe extern "C" {
    pub fn ma_wrap_engine_start(engine: ma_engine_handle) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn ma_wrap_engine_stop(engine: ma_engine_handle) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn ma_wrap_engine_set_volume(engine: ma_engine_handle, volume: f32);
}
unsafe extern "C" {
    pub fn ma_wrap_engine_get_sample_rate(engine: ma_engine_handle) -> ::std::os::raw::c_uint;
}
unsafe extern "C" {
    pub fn ma_wrap_register_memory(
        engine: ma_engine_handle,
        name: *const ::std::os::raw::c_char,
        data: *const ::std::os::raw::c_void,
        size: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn ma_wrap_unregister_memory(
        engine: ma_engine_handle,
        name: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn ma_wrap_sound_load(
        engine: ma_engine_handle,
        name: *const ::std::os::raw::c_char,
        flags: ::std::os::raw::c_uint,
    ) -> ma_sound_handle;
}
unsafe extern "C" {
    pub fn ma_wrap_sound_unload(sound: ma_sound_handle);
}
unsafe extern "C" {
    pub fn ma_wrap_sound_play(sound: ma_sound_handle) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn ma_wrap_sound_stop(sound: ma_sound_handle) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_volume(sound: ma_sound_handle, volume: f32);
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_pitch(sound: ma_sound_handle, pitch: f32);
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_pan(sound: ma_sound_handle, pan: f32);
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_looping(sound: ma_sound_handle, looping: ::std::os::raw::c_int);
}
unsafe extern "C" {
    pub fn ma_wrap_sound_is_playing(sound: ma_sound_handle) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn ma_wrap_sound_at_end(sound: ma_sound_handle) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn ma_wrap_sound_seek_to_frame(
        sound: ma_sound_handle,
        frame: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_spatialization_enabled(
        sound: ma_sound_handle,
        enabled: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_position(sound: ma_sound_handle, x: f32, y: f32, z: f32);
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_velocity(sound: ma_sound_handle, x: f32, y: f32, z: f32);
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_attenuation_model(
        sound: ma_sound_handle,
        model: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_rolloff(sound: ma_sound_handle, rolloff: f32);
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_min_distance(sound: ma_sound_handle, distance: f32);
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_max_distance(sound: ma_sound_handle, distance: f32);
}
unsafe extern "C" {
    pub fn ma_wrap_sound_set_doppler_factor(sound: ma_sound_handle, factor: f32);
}
unsafe extern "C" {
    pub fn ma_wrap_listener_set_position(
        engine: ma_engine_handle,
        index: ::std::os::raw::c_uint,
        x: f32,
        y: f32,
        z: f32,
    );
}
unsafe extern "C" {
    pub fn ma_wrap_listener_set_direction(
        engine: ma_engine_handle,
        index: ::std::os::raw::c_uint,
        x: f32,
        y: f32,
        z: f32,
    );
}
unsafe extern "C" {
    pub fn ma_wrap_listener_set_velocity(
        engine: ma_engine_handle,
        index: ::std::os::raw::c_uint,
        x: f32,
        y: f32,
        z: f32,
    );
}
unsafe extern "C" {
    pub fn ma_wrap_listener_set_world_up(
        engine: ma_engine_handle,
        index: ::std::os::raw::c_uint,
        x: f32,
        y: f32,
        z: f32,
    );
}
